style.css
body {
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    position: absolute;
    min-height: 100vh;
}

#header {
    width: 100%;
    padding: 10px;
    text-align: center;
}

#contentContainer {
    display: flex;
    flex: 1;
    justify-content: space-between;
    align-items: center;
    box-sizing: border-box;
    padding: 10px;
}

#mainImage {
    flex: 1;
    height: 40%;
}

#mainImage img {
    width: 50%;
    height: 50%;
}

#mainContent {
    display: flex;
    flex: 1;
    flex-direction: column;
    text-align: center;
    justify-content: center;
    align-items: center;
}

#icon img {
    height: 15%;
    width: 15%;
    padding: 10px 20px;
}

#showFormButton {
    font-size: 18px;
    padding: 10px;
    border-radius: 5px;
    background-color: #fbcfe8;
    border: none;
    box-shadow:  0px 4px 6px rgba(0, 0, 0, 0.1);;
}

#bookForm {
    display: none;
    display: flex;
    flex-direction: column;
    gap: 2.5px;
    padding: 10px;
}

#addBookButton {
    padding: 10px;
}

#bookShelf {
    width: 25%;
    height: 500px;
    padding: 10px;
    background-color: #f472b6;
    border-radius: 5px;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
}

#bookShelf h2 {
    text-align: center;
}

#suggestionsContainer {
    position: absolute; bottom: 0;
    display: flex;
    width: 100%;
    justify-content: center;
    align-items: center;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
    padding: 10px;

}

#suggestions {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 20px;
}

